--- a/auth/index.html
+++ b/auth/index.html
@@ -7,102 +7,151 @@
     <title>My Art Auction App - Auth</title>
     <script type="module" src="../src/app.js" defer></script>
   </head>
-  <body class="">
+  <body class="body-styles">
     <header>
-      <div class="side-bar">
+      <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-16 md:w-24 md:h-24"
-          src="../images/Logo.png"
+          class="logo w-16 h-auto md:w-20 md:h-auto"
+          src="../../images/Logo.png"
           alt="Art logo"
         />
-        <nav>
-          <ul>
-            <li>
-              <a href="/">
-                <img src="../images/icons8-home-Desktop.png" alt="home icon" />
-                Home
+        <button id="hamburger-btn">
+          <img
+            id="hamburger-icon"
+            class="w-16 h-16 md:w-20 md:h-20"
+            src="../../images/Hamburger-icon.png"
+            alt=""
+          />
+        </button>
+        <nav class="nav nav-styles">
+          <ul id="nav-menu" class="hidden">
+            <li class="sidebar-li-layout">
+              <a class="nav-link link-flex" href="/">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-home-Desktop.png"
+                  alt="home icon"
+                />
+                <span class="span-text hidden">Home</span>
               </a>
             </li>
-            <li>
-              <a id="profile-link-nav" href="/profile/">
+            <li id="profile-link-nav">
+              <a class="nav-link link-flex" href="/profile/">
                 <img
-                  src="../images/icons8-user-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
-                Profile
-              </a>
+                <span class="span-text hidden">My Profile</span></a
+              >
             </li>
-            <li>
-              <a id="my-listings-link-nav" href="/my_listings/">
+
+            <li id="my-listings-link-nav" class="">
+              <a class="nav-link link-flex" href="/my_listings/">
                 <img
-                  src="../images/icons8-my-listings-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
-                My Listings
+                <span class="span-text hidden">My Listings</span>
               </a>
             </li>
-            <li>
-              <a id="my-bids-link-nav" href="/my_bids/">
-                <img src="../images/icons8-bids-Desktop.png" alt="bids icon" />
-                My Bids
-              </a>
-            </li>
-            <li>
-              <a id="create-listing-link-nav" href="/listing/create">
-                <img src="../images/icons8-add-desktop.png" alt="add icon" />
-                Create Listing
-              </a>
-            </li>
-            <li>
-              <a id="reg-link-nav" href="/auth/">
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="my-bids-link-nav"
+                href="/my_bids/"
+              >
                 <img
-                  src="../images/icons8-register-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-bids-Desktop.png"
+                  alt="bids icon"
+                />
+                <span class="hidden span-text">My Bids</span>
+              </a>
+            </li>
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="create-listing-link-nav"
+                href="/listing/create/"
+              >
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-add-desktop.png"
+                  alt="add icon"
+                />
+
+                <span class="hidden span-text">Create Listing</span></a
+              >
+            </li>
+            <li class="">
+              <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
-                Register
+                <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li>
-              <a id="sign-in-link-nav" href="/auth/">
-                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
-                Sign in
-              </a>
-            </li>
-            <li>
-              <button class="sign-out-btn">
+            <li id="sign-in-link-nav" class="">
+              <a class="nav-link link-flex" href="/auth/">
                 <img
-                  class=""
-                  src="../images/icons8-sign-out-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
+                <span class="hidden span-text">Sign in</span>
+              </a>
+            </li>
+            <li class="sidebar-li-layout">
+              <button class="sign-out-btn nav-link link-flex">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
-                Sign out
+                <span class="hidden span-text">Sign Out</span>
               </button>
             </li>
           </ul>
         </nav>
       </div>
     </header>
-    <main>
-      <h1>Sign in or Register an Account</h1>
+    <main class="flex-1">
+      <h1 class="h1-styles">Sign in or Register an Account</h1>
 
-      <div>
-        <button id="sign-in-btn-tab">Sign in</button>
-        <button id="reg-btn-tab">Register</button>
+      <div class="flex-row-center">
+        <button class="button-styles" id="sign-in-btn-tab">Sign in</button>
+        <button class="button-styles" id="reg-btn-tab">Register</button>
       </div>
 
-      <div class="hidden" id="sign-in-form">
-        <h2>Sign in</h2>
-        <form class="sign-in-form" name="sign-in">
-          <div>
-            <label for="email">Email</label>
-            <input id="email" type="email" name="email" required />
+      <div class="hidden relative" id="sign-in-form">
+        <form
+          class="sign-in-form sign-in-form-styles form-styles"
+          name="sign-in"
+        >
+          <h1 class="h1-styles form-title-styles">Sign in</h1>
+          <div class="flex flex-row">
+            <div class="mt-4">
+              <img
+                class="w-[30px] h-[30px] md:w-[50px] md:h-[50px]"
+                src="/images/icons8-username-64.png"
+                alt=""
+              />
+            </div>
+            <div class="flex flex-col">
+              <label class="gold-labels" for="email">Email</label>
+              <input id="email" type="email" name="email" required />
+            </div>
           </div>
 
-          <div>
-            <label for="password">Password</label>
+          <div class="flex flex-col">
+            <label class="gold-labels" for="password">Password</label>
             <input type="password" name="password" id="password" required />
           </div>
-          <button>Sign in</button>
+          <button class="button-styles">Sign in</button>
         </form>
         <div id="error-message-sign-in-form"></div>
       </div>
