--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -7,150 +7,210 @@
     <title>My Art Auction App - Create a Listing</title>
     <script type="module" src="../../src/app.js" defer></script>
   </head>
-  <body class="">
+  <body class="body-styles">
     <header>
-      <div class="side-bar">
+      <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-16 md:w-24 md:h-24"
+          class="logo w-16 h-auto md:w-20 md:h-auto"
           src="../../images/Logo.png"
           alt="Art logo"
         />
-        <nav>
-          <ul>
-            <li>
-              <a href="/">
+        <button id="hamburger-btn">
+          <img
+            id="hamburger-icon"
+            class="w-16 h-16 md:w-20 md:h-20"
+            src="../../images/Hamburger-icon.png"
+            alt=""
+          />
+        </button>
+        <nav class="nav nav-styles">
+          <ul id="nav-menu" class="hidden">
+            <li class="sidebar-li-layout">
+              <a class="nav-link link-flex" href="/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-home-Desktop.png"
                   alt="home icon"
                 />
-
-                Home</a
-              >
+                <span class="span-text hidden">Home</span>
+              </a>
             </li>
-            <li>
-              <a id="profile-link-nav" href="/profile/">
+            <li id="profile-link-nav">
+              <a class="nav-link link-flex" href="/profile/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
-                Profile</a
+                <span class="span-text hidden">My Profile</span></a
               >
             </li>
 
-            <li>
-              <a id="my-listings-link-nav" href="/my_listings/">
+            <li id="my-listings-link-nav" class="">
+              <a class="nav-link link-flex" href="/my_listings/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
-                My Listings
+                <span class="span-text hidden">My Listings</span>
               </a>
             </li>
-            <li>
-              <a id="my-bids-link-nav" href="/my_bids/">
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="my-bids-link-nav"
+                href="/my_bids/"
+              >
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-bids-Desktop.png"
                   alt="bids icon"
-                />My Bids</a
-              >
+                />
+                <span class="hidden span-text">My Bids</span>
+              </a>
             </li>
-            <li>
-              <a id="create-listing-link-nav" href="/listing/create/">
-                <img src="../../images/icons8-add-desktop.png" alt="add icon" />
-
-                Create Listing</a
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="create-listing-link-nav"
+                href="/listing/create/"
               >
-            </li>
-            <li>
-              <a id="reg-link-nav" href="/auth/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-add-desktop.png"
+                  alt="add icon"
+                />
+
+                <span class="hidden span-text">Create Listing</span></a
+              >
+            </li>
+            <li class="">
+              <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
-                Register
+                <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li>
-              <a id="sign-in-link-nav" href="/auth/">
+            <li id="sign-in-link-nav" class="">
+              <a class="nav-link link-flex" href="/auth/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/sign-in-desktop.png"
                   alt="sign in icon"
                 />
-                Sign in
+                <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li>
-              <button class="sign-out-btn">
+            <li class="sidebar-li-layout">
+              <button class="sign-out-btn nav-link link-flex">
                 <img
-                  class=""
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
-                Sign out
+                <span class="hidden span-text">Sign Out</span>
               </button>
             </li>
           </ul>
         </nav>
       </div>
     </header>
-    <main>
-      <div class="create-form-container">
-        <h1>Create a Listing</h1>
+    <main class="flex-1">
+      <div class="create-form-container flex-row-center w-[100%] h-[100%]">
+        <form
+          class="form-styles w-[283px] h-[580px] p-4"
+          name="create-listing"
+          id="create-form"
+        >
+          <h1 class="h1-styles form-title-styles mb-4">Create a Listing</h1>
 
-        <form name="create-listing" id="create-form">
-          <div>
-            <label for="title">Title</label>
-            <input id="title" type="text" name="title" required />
-          </div>
-
-          <div>
-            <label for="description">Description</label>
-            <textarea id="description" name="description"></textarea>
-          </div>
-
-          <div>
-            <label for="tags">Tags</label>
-            <input id="tags" type="text" name="tags" />
-          </div>
-
-          <div>
-            <label for="urls">Image url</label>
+          <div class="flex-col-center-layout">
+            <label class="gold-labels" for="title">Title</label>
             <input
+              class="input-styles"
+              id="title"
+              type="text"
+              name="title"
+              required
+            />
+          </div>
+
+          <div class="flex-col-center-layout">
+            <label class="gold-labels" for="description">Description</label>
+            <textarea
+              class="text-area-styles"
+              id="description"
+              name="description"
+            ></textarea>
+          </div>
+
+          <div class="flex-col-center-layout">
+            <label class="gold-labels" for="tags">Tags</label>
+            <input class="input-styles" id="tags" type="text" name="tags" />
+          </div>
+
+          <div id="url-container" class="flex-col-center-layout">
+            <label class="gold-labels" for="urls">Image Url</label>
+            <input
+              class="input-styles"
               type="url"
               name="urls"
               id="urls"
-              placeholder="Enter URLs separated by commas"
+              placeholder="Image url"
             />
           </div>
-          <div>
-            <label for="alts">Image alt</label>
+          <div id="alt-container" class="flex-col-center-layout">
+            <label class="gold-labels" for="alts">Image alt</label>
             <input
+              class="input-styles"
               id="alts"
               type="text"
               name="alts"
-              placeholder="Enter Alt texts separated by commas"
+              placeholder="Image Alt"
             />
           </div>
-          <button id="Add-image-button">Add more images</button>
-          <div>
-            <label for="endsAt">Ends at</label>
-            <input id="endsAt" type="datetime-local" name="endsAt" required />
+          <div class="flex-row-center">
+            <button
+              class="button-styles mt-2 p-1 pl-2 pr-2"
+              id="Add-image-button"
+            >
+              Add more images
+            </button>
           </div>
-
-          <button id="create-listing-btn" type="submit">
-            Create New Listing
-          </button>
+          <div class="flex-col-center-layout">
+            <label class="gold-labels" for="endsAt">Ends at</label>
+            <input
+              class="input-styles"
+              id="endsAt"
+              type="datetime-local"
+              name="endsAt"
+              required
+            />
+          </div>
+          <div class="flex-row-center">
+            <button
+              class="button-styles mt-2 p-1 pl-2 pr-2"
+              id="create-listing-btn"
+              type="submit"
+            >
+              Create New Listing
+            </button>
+          </div>
         </form>
       </div>
     </main>
-    <footer>
-      <div>
+    <footer class="footer">
+      <div class="footer-text-layout">
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
         <a href="">Terms and Conditions</a>
       </div>
-      <div>
+      <div class="social-media-icons-box">
         <a href="">
           <img
             src="../../images/icons8-facebook-desktop.png"
